ikiwiki (2.55) UNRELEASED; urgency=low

  * remove: New plugin that adds the ability to remove pages via the web.
    (Sponsored by The TOVA Company.)
  * rename: New plugin that adds the ability to rename pages via the web.
    (Sponsored by The TOVA Company.) (This one's for you, Kyle.)
  * prefix_directives enabled in doc wiki, all preprocessor directives
    converted. (Simon McVittie)
  * editpage: Don't show attachments link when attachments are disabled.
  * All rcs backends need to implement rcs_remove. (Done for svn, git).
  * tag: Allow tagbase to be overridden by starting a tag with "./" or "/".
    (Simon McVittie)
  * Really fix bug with links to pages with names containing colons. 
    Previous fix mised a few cases.
  * Avoid troublesome abs_path calls in wrapper setup.
  * Add allow_symlinks_before_srcdir config setting that can be used to avoid
    a security check that is a good safe default, but problimatic overkill in
    some situations.

 -- Joey Hess <joeyh@debian.org>  Mon, 21 Jul 2008 11:35:46 -0400

ikiwiki (2.54) unstable; urgency=low

  [ Joey Hess ]
  * Make it possible to load setup files w/o running them. Code
    needing to do so can call IkiWiki::Setup::load, which will return
    a hash of values.

  [ Josh Triplett ]
  * ikiwiki-transition: Fix command-line processing so the prefix_directives
    transition works again.

  [ Joey Hess ]
  * template: Add support for a BASENAME variable.
  * Fixes creation of pages when clicking on WikiLinks starting with "/".
  * Change deb dependencies to list Text::Markdown before markdown, since
    the former, while slower, has a much better html parser that avoids
    numerous bugs.
  * Move yesno function out of inline and into IkiWiki core, not exported.
  * Error handling improvement for preprocess hooks. It's now safe to call
    error() from such hooks; it will cause a nicely formatted error message
    to be inserted into the page.