@@ -24,6 +24,14 @@ sub rcs_commit ($$$;$$) {
 	# Tries to commit the page; returns undef on _success_ and
 	# a version of the page with the rcs's conflict markers on failure.
 	# The file is relative to the srcdir.
+	my ($file, $message, $rcstoken, $user, $ipaddr) = @_;
+	return undef # success
+}
+
+sub rcs_commit_staged ($$$) {
+	# Commits all staged changes. Changes can be staged using rcs_add,
+	# rcs_remove, and rcs_rename.
+	my ($message, $user, $ipaddr)=@_;
 	return undef # success
 }
 
@@ -31,12 +39,25 @@ sub rcs_add ($) {
 	# Add a file. The filename is relative to the root of the srcdir.
 	# Note that this should not check the new file in, it should only
 	# prepare for it to be checked in when rcs_commit is called.
+	# Note that the file may be in a new subdir that is not yet added
+	# to version control; the subdir can be added if so.
 }
 
 sub rcs_remove ($) {
 	# Remove a file. The filename is relative to the root of the srcdir.
 	# Note that this should not check the removal in, it should only
 	# prepare for it to be checked in when rcs_commit is called.
+	# Note that the new file may be in a new subdir that is not yet added
+	# to version control; the subdir can be added if so.
+}
+
+sub rcs_rename ($$) {
+	# Rename a file. The filenames are relative to the root of the srcdir.
+	# Note that this should not commit the rename, it should only
+	# prepare it for when rcs_commit is called.
+	# The new filename may be in a new subdir, that is not yet added to
+	# version control. If so, the subdir will exist already, and should
+	# be added.
 }
 
 sub rcs_recentchanges ($) {
